# pyLC3

./: .gitignore  .gitmodules  .travis.yml  CONTRIBUTING.rst  HISTORY.rst  LICENSE  MANIFEST.in  Makefile  README.rst  pyproject.toml  requirements_dev.txt  setup.cfg  setup.py  tox.ini
docs/: Makefile  conf.py  installation.rst  make.bat  usage.rst
pyLC3/: __init__.py
tests/: __init__.py  test_pyLC3.py
