[build-system]
requires = ["setuptools", "wheel", "scikit-build", "cmake", "ninja"]

[tool.tox]
legacy_tox_ini = """
[tox]
envlist = py27, flake8

[travis]
python =
    2.7: py27

[testenv:flake8]
basepython = python
deps = flake8
commands = flake8 pyLC3

[testenv]
setenv =
    PYTHONPATH = {toxinidir}

deps = scikit-build
commands = python setup.py test
"""
