[build-system]
requires = ["setuptools", "wheel", "scikit-build", "cmake", "ninja"]
build-backend = "setuptools.build_meta"

[tool.tox]
legacy_tox_ini = """
[tox]
envlist = py27
requires = "scikit-build"

[py27]
deps = "scikit-build"

[travis]
python =
    2.7: py27

[testenv]
setenv =
    PYTHONPATH = {toxinidir}

commands = python setup.py test
"""
